# sorted

./: Cargo.toml  README.md
.codex/skills/relase/: SKILL.md
.github/workflows/: release.yml
docs/: release-checklist.md
openspec/changes/add-copy-progress-and-quit-guard/: design.md  proposal.md  tasks.md
openspec/changes/add-cross-platform-media-archive-tui/: tasks.md
openspec/changes/archive/2026-03-27-add-copy-progress-and-quit-guard/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-add-cross-platform-media-archive-tui/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-enhance-copy-conflict-handling/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-improve-destination-path-robustness/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-optimize-ui-style-and-interaction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-28-add-device-directory-override/: design.md  proposal.md  tasks.md
openspec/changes/use-tree-picker-for-settings-path/: design.md
openspec/specs/archive-settings-ui/: spec.md
openspec/specs/github-release-distribution/: spec.md
openspec/specs/release-install-bootstrap/: spec.md
openspec/specs/removable-media-discovery/: spec.md
openspec/specs/themed-archive-import/: spec.md
openspec/specs/tui-experience-polish/: spec.md
scripts/: install.sh  package-release.sh
src/: lib.rs  main.rs
src/core/: archive.rs  config.rs  copy.rs  mod.rs  types.rs
src/platform/: discovery.rs
src/ui/: app.rs
tests/: copy_flow.rs
(+40 files in other folders)
