[package]
name = "sorted"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.29"
directories = "5.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.37"
toml = "0.9"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"
