[package]
name = "sorted"
version = "0.1.6"
edition = "2024"
repository = "https://github.com/hongding0211/sorted"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.29"
directories = "5.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.37"
toml = "0.9"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"

[package.metadata.release]
allow-branch = ["main"]
publish = false
push-remote = "origin"
shared-version = true
tag-name = "v{{version}}"
tag-message = "release: {{crate_name}} {{version}}"
pre-release-commit-message = "release: {{crate_name}} {{version}}"
